--- a/plugins/bootnetcrasher/school/components/actualites/default.htm
+++ b/plugins/bootnetcrasher/school/components/actualites/default.htm
@@ -1,3 +1,6 @@
+<style type="text/css">
+
+</style>
 <div class="col-lg-9 col-12">
     <section class="news">
         <div class='section-header clearfix'>
@@ -5,17 +8,6 @@
                 <div class="row" style="padding-bottom: 5px;border-bottom: 2px #e2e2e2 solid;margin-bottom: 20px;">
                     <div class="col-lg-10" style="padding-left: 0px;">
                         <h1 class="section-title title col-md-2" style="font-size: 1.2rem;padding-left: 0px;margin-bottom: 0px;">Actualités</h1>
-                    </div>
-                    <div class="col-md-2" style="text-align: right;padding-right: 0px;">
-                        <ul class="list-inline" style="padding-top: 4px;margin-bottom: 0px;">
-                            <li>
-                                <a href="{{ url('/actualites') }}">Voir <svg class="svg-inline--fa fa-plus fa-w-14"
-                                        aria-hidden="true" data-prefix="fa" data-icon="plus" role="img" xmlns="http://www.w3.org/2000/svg"
-                                        viewBox="0 0 448 512" data-fa-i2svg="">
-                                        <path fill="currentColor" d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"></path>
-                                    </svg><!-- <i class="fa fa-plus"></i> --></a>
-                            </li>
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -26,12 +18,12 @@
 
                     {% for actualite in actualites %}
                         <div class="item carousel-item active">
-                            <div class="row">
+                            <div class="row" data-id="{{ actualite.id }}">
                                 <div class="col-lg-3">
                                     <figure class='jss374' style='background-image: url("{{ actualite.cover.getpath }}");'></figure>
                                 </div>
                                 <div class="col-lg-9">
-                                    <h2 class="title"><a href="news-single.html">{{ actualite.title }}</a></h2>
+                                    <h2 class="title"><a href="{{ url('/actualites') }}/{{ actualite.id }}" style="color: #6091ba;">{{ actualite.title }}</a></h2>
                                     <p>
                                         {{ actualite.content|truncate(235, false, " ...") }}
                                     </p>
@@ -43,6 +35,8 @@
 
                 </div>
             </div>
+
+            {{ actualites|raw}}
 
         </div>
     </section>
