--- a/plugins/bootnetcrasher/school/components/actualites/default.htm
+++ b/plugins/bootnetcrasher/school/components/actualites/default.htm
@@ -1,18 +1,85 @@
 <style type="text/css">
-
+.pagination {
+    display: inline-block;
+    padding-left: 0;
+    margin: 20px 0;
+    border-radius: 4px;
+}
+.pagination > li:first-child > a, .pagination > li:first-child > span {
+    margin-left: 0;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+.pagination > li:first-child > a, .pagination > li:first-child > span {
+    margin-left: 0;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+.pagination > li:first-child > a, .pagination > li:first-child > span {
+    margin-left: 0;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+.pagination > li > a, .pagination > li > span {
+    position: relative;
+    float: left;
+    padding: 6px 12px;
+    margin-left: -1px;
+    line-height: 1.42857143;
+    color: #337ab7;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #ddd;
+}
+.pagination > li {
+    display: inline;
+}
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
+    background-color: #6091ba;
+    border-color: #6091ba;
+}
+.pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
+    z-index: 3;
+    color: #fff;
+    cursor: default;
+    background-color: #337ab7;
+    border-color: #337ab7;
+}
+.pagination > li > a, .pagination > li > span {
+    position: relative;
+    float: left;
+    padding: 6px 12px;
+    margin-left: -1px;
+    line-height: 1.42857143;
+    color: #337ab7;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #ddd;
+        border-top-color: rgb(221, 221, 221);
+        border-right-color: rgb(221, 221, 221);
+        border-bottom-color: rgb(221, 221, 221);
+        border-left-color: rgb(221, 221, 221);
+}
+ul.pagination{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
 </style>
 <div class="col-lg-9 col-12">
     <section class="news">
         <div class='section-header clearfix'>
             <div class="col-md-12">
                 <div class="row" style="padding-bottom: 5px;border-bottom: 2px #e2e2e2 solid;margin-bottom: 20px;">
-                    <div class="col-lg-10" style="padding-left: 0px;">
+                    <div class="col-lg-9" style="padding-left: 0px;">
                         <h1 class="section-title title col-md-2" style="font-size: 1.2rem;padding-left: 0px;margin-bottom: 0px;">Actualités</h1>
+                    </div>
+                    <div class="col-lg-3" style="padding-right: 0px;">
+                        <a class="read-more float-right" href="{{ url('actualites') }}">Voir toutes les actualités<i class="fa fa-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="section-content clearfix" style='padding-left: 0px;'>
+        <div class="section-content clearfix" style="padding-left: 0px;padding-bottom: 0px;">
             <div id="news-carousel" class="news-carousel carousel slide">
                 <div class="carousel-inner">
 
@@ -36,7 +103,9 @@
                 </div>
             </div>
 
-            {{ actualites|raw}}
+            <!--<div class="pagination" style="margin-bottom: 0px;margin-top: 0px;">
+                {{ actualites|raw}}
+            </div>-->
 
         </div>
     </section>
