--- a/plugins/bootnetcrasher/slideshow/components/slideshow/default.htm
+++ b/plugins/bootnetcrasher/slideshow/components/slideshow/default.htm
@@ -10,13 +10,17 @@
                 <img src="{{ slideshow.slide.getpath  }}" alt="" />
                 <p class="flex-caption">
                     <p class="flex-caption">
-                        <span class="main">
-                            {{ slideshow.title_cover }}
-                        </span>
-                        <br>
-                        <span class="secondary clearfix">
-                            {{ slideshow.description_cover }}
-                        </span>
+                        {% if slideshow.title_cover %}
+                            <span class="main">
+                                {{ slideshow.title_cover }}
+                            </span>
+                            <br>
+                        {% endif %}
+                        {% if slideshow.description_cover %}
+                            <span class="secondary clearfix">
+                                {{ slideshow.description_cover }}
+                            </span>
+                        {% endif %}
                     </p>
                 </p>
             </li>
