--- a/themes/default/partials/site/header.htm
+++ b/themes/default/partials/site/header.htm
@@ -14,7 +14,7 @@
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Rechercher sur le site ...">
                     </div>
-                    <button type="submit" class="btn btn-theme">Go</button>
+                    <button type="submit" class="btn btn-theme">Recherchez</button>
                 </form>
             </div>
         </div>
@@ -30,7 +30,7 @@
             <!--//logo-->
             <div class="info col-md-8 col-12">
                 <ul class="menu-top float-right d-none d-md-block">
-                    <li class="divider"><a href="{{ url('/') }}">Home</a></li>
+                    <li class="divider"><a href="{{ url('/') }}">Accueil</a></li>
                     <!-- <li class="divider"><a href="faq.html">FAQ</a></li> -->
                     <li><a href="{{ url('/contact') }}">Contact</a></li>
                 </ul>
@@ -62,7 +62,7 @@
 
             <div class="navbar-collapse collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item"><a class="active nav-link" href="{{ url('/') }}">Home</a></li>
+                    <li class="nav-item"><a class="active nav-link" href="{{ url('/') }}">Accueil</a></li>
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown-1" role="button" data-toggle="dropdown"
@@ -79,7 +79,7 @@
                             aria-haspopup="true" aria-expanded="false">Enseignants <i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown-2">
                             <a class="dropdown-item" href="{{ url('/professeurs') }}">Infos aux Enseignants</a>
-                            <a class="dropdown-item" href="{{ url('/activites-fin-trimestre') }}" style="width: 109%;">Activites de
+                            <a class="dropdown-item" href="{{ url('/activites-fin-trimestre') }}" style="width: 109%;">Activités de
                                 fin de trimestre</a>
                         </div>
                     </li>
@@ -88,7 +88,7 @@
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0"
                             data-close-others="false" href="#">Vie scolaire <i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="{{ url('clubs-activites')}}">Clubs d'activites</a>
+                            <a class="dropdown-item" href="{{ url('clubs-activites')}}">Clubs d'activités</a>
                             <a class="dropdown-item" href="javascript:void(0)">Conseil scolaire</a>
                             <a class="dropdown-item" href="javascript:void(0)">Galerie</a>
                         </div>
@@ -102,7 +102,7 @@
                             <!--<a class="dropdown-item" href="javascript:void(0)">Infos aux élèves</a>-->
                             <a class="dropdown-item" href="{{ url('/emplois-du-temps') }}">Emplois du temps eleve</a>
                             <a class="dropdown-item" href="javascript:void(0)">Devoirs de niveau</a>
-                            <a class="dropdown-item" href="{{ url('/sujets') }}">Sujets</a>
+                            <a class="dropdown-item" href="{{ url('/sujets') }}">Bibliothèque numérique</a>
                         </div>
                     </li>
 
@@ -110,7 +110,7 @@
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0"
                             data-close-others="false" href="#">Parents d'Elèves <i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="{{ url('/suivre-mes-eleves') }}">Suivre mes élèves </a>
+                            <a class="dropdown-item" href="{{ url('/suivre-mes-eleves') }}">Suivre mon élèves </a>
                             <!-- c'est programme qui a pour de suivre les moyennes de son enfant 
                             <a class="dropdown-item" href="javascript:void(0)">Notes-Moyennes-Bulletins</a>-->
                         </div>
